[gd_scene load_steps=5 format=3 uid="uid://cebe52c54d0pn"]

[ext_resource type="Texture2D" uid="uid://lngcmt2hdg2b" path="res://Sprites/UI/ItemBox.png" id="1_jekwd"]
[ext_resource type="Script" uid="uid://dffehvx810307" path="res://Scripts/tool_button.gd" id="2_vfa5f"]
[ext_resource type="Texture2D" uid="uid://8i67gik0xi8s" path="res://Sprites/UI/CornSeed_Icon.png" id="3_pngsy"]

[sub_resource type="LabelSettings" id="LabelSettings_6bp64"]
font_size = 20
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.6901961)

[node name="ToolButton" type="TextureButton"]
custom_minimum_size = Vector2(100, 100)
offset_left = 142.0
offset_top = 138.0
offset_right = 242.0
offset_bottom = 238.0
texture_normal = ExtResource("1_jekwd")
stretch_mode = 4
script = ExtResource("2_vfa5f")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_pngsy")

[node name="QuantityText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -99.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 0
text = "50
"
label_settings = SubResource("LabelSettings_6bp64")
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
